--- a/release/index.html
+++ b/release/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-	<base href="/release/">
+	<base href="/color-scheme-helper/release/">
 
 	<title>Color scheme helper</title>
-	
+
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
